--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,7 +2,7 @@ cmake_minimum_required(VERSION 3.21)
 project(lmj)
 
 set(CMAKE_CXX_STANDARD 20)
-set(CMAKE_CXX_FLAGS "-Werror -Wextra -Wpedantic -Wall -march=native")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Werror -Wextra -Wall -Wpedantic -Wshadow -march=native")
 set(CMAKE_EXE_LINKER_FLAGS "-static")
 
 #include_directories(src src/containers src/io src/math src/utils)
